# uncons-demo

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  VOICE_ORCHESTRATION.md
backend/: Dockerfile  Dockerfile.agent  pyproject.toml  railway.toml
backend/src/: __init__.py  app.py  config.py
backend/src/adapters/: __init__.py  anki_connect.py  deepgram_stt.py  deepgram_tts.py  gemini_adapter.py  local_test_deck.py
backend/src/adapters/data/: __init__.py  test_deck.json
backend/src/agents/: __init__.py  state.py  uncons_agent.py  voice_orchestrator.py  worker.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  cards.py  decks.py  livekit.py  session.py  worker.py
backend/src/composition/: __init__.py
backend/src/domain/: __init__.py  constants.py
backend/src/domain/entities/: __init__.py  card.py  session.py
backend/src/domain/services/: __init__.py  barge_in.py  card_sanitizer.py  command_parser.py  evaluation_service.py  hint_service.py  session_manager.py  sync_orchestrator.py  turn_detector.py  voice_session.py
backend/src/domain/value_objects/: __init__.py  deck_stats.py  evaluation_result.py  rating.py  session_state.py  transcript.py
backend/src/infrastructure/: __init__.py  recovery_store.py  retry.py  usage_tracker.py
backend/src/ports/: __init__.py  flashcard_service.py  llm_service.py  speech.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/complete/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/components/: DeckCard.tsx  SessionStats.tsx  index.ts
frontend/src/components/review/: ActionButtons.tsx  GlassCard.tsx  LeftSidebar.tsx  ProgressRing.tsx  ReviewLayout.tsx  RightSidebar.tsx  SessionComplete.tsx  VoiceOrb.tsx  index.ts
frontend/src/hooks/: index.ts  useHydrated.ts  useSession.ts  useVoiceSession.ts
frontend/src/lib/: api.ts  formatCardContent.ts
scripts/: dev.ps1
